# expensebills

./: .gitignore  Cargo.toml  Links.md  build_tailwindcss_prod.sh  index.html  package.json  tailwind.config.js  webpack.config.js
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: main.yml
backend/: Cargo.toml  Rocket.toml
backend/src/: cors.rs  main.rs  openapi.rs  pool.rs  ulid_wrap.rs
backend/src/migrations/: m20220717_000001_create_receipts_tables.rs  mod.rs
backend/src/v1/: greeting.rs  mod.rs  receipts.rs
entity/: Cargo.toml
entity/src/: lib.rs  receipt.rs  recipient.rs
frontend/: Cargo.toml  build_tailwindcss_dev.sh  index.html
frontend/src/: errors.rs  main.rs  state.rs
frontend/src/components/atoms/: button.rs
frontend/src/components/organisms/: mod.rs
frontend/src/components/pages/: mod.rs
models/: Cargo.toml
proto/: receipt.proto
src/: lib.rs  main.rs
