[package]
version = "0.1.0"
name = "expensebills"
repository = "https://github.com/OpenFlowLabs/expensebills.git"
description = "The Application to manage my expense bills"
categories = ["wasm", "rust", "tailwindcss", "seed", "personal", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.9.1"
fixed-vec-deque = "0.1.9"

[dependencies.web-sys]
version = "0.3.45"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
